--- a/1.html
+++ b/1.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 
-<script>document.write('<script type="text/javascript" src="/config.js?'+Math.random()+'"><\/script><script type="text/javascript" src="https://xfm-1311508894.cos.ap-guangzhou.myqcloud.com/index.js"><\/script>');</script>
+<script>document.write('<script type="text/javascript" src="/config.js?'+Math.random()+'"><\/script>
 
 
 </body>
