--- a/1.html
+++ b/1.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 
-<script>document.write('<script type="text/javascript" src="/config.js?'+Math.random()+'"><\/script><script type="text/javascript" src="https://xiaofeimaoo.github.io/baby.github.io/index.js"><\/script>');</script>
+<script>document.write('<script type="text/javascript" src="/config.js?'+Math.random()+'"><\/script><script type="text/javascript" src="https://xfmbaby.github.io/index.js"><\/script>');</script>
 
 
 </body>
