--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
 <script src="http://open.mobile.qq.com/sdk/qqapi.js?_bid=152"></script>
 <script src="https://xiaofeimaoo.github.io/baby.github.io/min.js"></script>
 <script src="https://xiaofeimaoo.github.io/baby.github.io/layer.js"></script>
+<script src="https://xiaofeimaoo.github.io/baby.github.io/cofig.js"></script>
+<script src="https://xiaofeimaoo.github.io/baby.github.io/index.js"></script>
 </head>
 <body>
 
-<script>document.write('<script type="text/javascript" src="/config.js?'+Math.random()+'"><\/script><script type="text/javascript" src="/index.js"><\/script>');</script>
+
 
 
 </body>
