--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 <meta name="referrer" content="never">
 <title>小肥猫每日精品推荐</title>
 <meta itemprop="name" name="title" content="小肥猫每日精品推荐" />
-<link href="https://xiaofeimaoo.github.io/baby.github.io/layer.css" rel="stylesheet" type="text/css">
+<link href="https://xfm-1311508894.cos.ap-guangzhou.myqcloud.com/layer.css" rel="stylesheet" type="text/css">
 <script src="http://open.mobile.qq.com/sdk/qqapi.js?_bid=152"></script>
-<script src="https://xiaofeimaoo.github.io/baby.github.io/min.js"></script>
-<script src="https://xiaofeimaoo.github.io/baby.github.io/layer.js"></script>
+<script src="https://xfm-1311508894.cos.ap-guangzhou.myqcloud.com/min.js"></script>
+<script src="https://xfm-1311508894.cos.ap-guangzhou.myqcloud.com/layer.js"></script>
 </head>
 <body>
 
-<script>document.write('<script type="text/javascript" src="/config.js?'+Math.random()+'"><\/script><script type="text/javascript" src="https://xiaofeimaoo.github.io/baby.github.io/index.js"><\/script>');</script>
+<script>document.write('<script type="text/javascript" src="/config.js?'+Math.random()+'"><\/script><script type="text/javascript" src="https://xfm-1311508894.cos.ap-guangzhou.myqcloud.com/index.js"><\/script>');</script>
 
 
 </body>
